--- a/app/pages/shout/ShoutPageCategory.scss
+++ b/app/pages/shout/ShoutPageCategory.scss
@@ -1,23 +1,27 @@
 @import '../../styles/constants.scss';
 
 .ShoutPageCategory {
-  margin: $vertical-spacing/2 0;
   display: flex;
+  margin: $vertical-spacing/2 0;
+  border-bottom: 1px solid $border-color;
+
   flex-wrap: wrap;
+
   > div {
     padding: $vertical-spacing/2 0;
     border-top: 1px solid $border-color;
+
     flex: 1 0 50%;
   }
   h3 {
-    font-size: 0.75em;
-    font-weight: normal;
-    color: $color-text-light;
     text-transform: uppercase;
+    color: $color-text-light;
+    font-size: .75em;
+    font-weight: normal;
   }
 }
 
 a.ShoutPageCategory-Filters-value {
-  font-size: 0.875em;
   color: $color-text;
+  font-size: .875em;
 }
