--- a/app/shouts/ShoutsList.scss
+++ b/app/shouts/ShoutsList.scss
@@ -17,7 +17,7 @@
 
 @include tablet() {
   .ShoutsList-item {
-    padding: $vertical-spacing $horizontal-spacing;
+    padding: $vertical-spacing $horizontal-spacing/2;
     flex: 1 1 auto;
   }
 }
